<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/box"
        app:layout_constraintHeight_percent=".22"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintTop_toBottomOf="@id/dummy_left"
        app:layout_constraintLeft_toRightOf="@id/dummy_left"
        android:background="@drawable/grid_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/indigo"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/inventory_maker"/>

    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/line"
        android:layout_height="1dp"
        android:background="@color/indigo" />
    <View
        android:id="@+id/dummy_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintWidth_percent=".05"
        app:layout_constraintHeight_percent=".22"
        android:layout_height="0dp"
        android:layout_width="0dp"/>
    <View
        android:id="@+id/dummy_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintWidth_percent=".05"
        app:layout_constraintHeight_percent=".22"
        android:layout_height="0dp"
        android:layout_width="0dp"/>


    <TextView
        app:layout_constraintTop_toTopOf="@id/box"
        app:layout_constraintStart_toEndOf="@id/dummy_left"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/user_name_textview"
        android:labelFor="@id/user_name_edittext"
        android:text="@string/user_name"
        android:textSize="22sp"
        android:textColor="@color/indigo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/user_name_textview"
        app:layout_constraintStart_toStartOf="@id/user_name_textview"
        android:id="@+id/password_textview"
        android:labelFor="@id/password_edittext"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="22sp"
        android:textColor="@color/indigo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/password_textview"
        app:layout_constraintStart_toStartOf="@id/user_name_textview"
        android:id="@+id/password_confirm_textview"
        android:labelFor="@id/password_edittext"
        android:layout_marginTop="20dp"
        android:text="@string/password_confirm"
        android:textSize="22sp"
        android:textColor="@color/indigo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="username"
        app:layout_constraintEnd_toEndOf="@id/box"
        app:layout_constraintBaseline_toBaselineOf="@id/user_name_textview"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".08"
        android:textColor="@color/indigo"
        android:id="@+id/user_name_edittext"
        android:inputType="text"
        android:textSize="22sp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@id/user_name_edittext"
        app:layout_constraintBaseline_toBaselineOf="@id/password_textview"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".08"
        android:textColor="@color/indigo"
        android:id="@+id/password_edittext"
        android:inputType="textPassword"
        android:textSize="22sp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@id/user_name_edittext"
        app:layout_constraintBaseline_toBaselineOf="@id/password_confirm_textview"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".08"
        android:id="@+id/password_confirm_edittext"
        android:textColor="@color/indigo"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:id="@+id/account_textview"
        app:layout_constraintEnd_toEndOf="@id/user_name_edittext"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_edittext"
        android:text="@string/create_account"
        android:paddingTop="20dp"
        android:textSize="16sp"
        android:textAlignment="textEnd"
        android:textColor="@color/blue"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button"
        android:backgroundTint="@color/indigo"
        android:textSize="20sp"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".1"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/box"
        app:layout_constraintEnd_toEndOf="@id/box"
        android:text="@string/login"/>


</androidx.constraintlayout.widget.ConstraintLayout>