<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sms_message_textview"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/setting_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sms_message"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sms_message_enable_textview"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/sms_message_textview"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/enable_notifications"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/sms_message_enable_textview"
        app:layout_constraintTop_toBottomOf="@id/sms_message_textview"
        android:id="@+id/enable_sms_switch"/>

    <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/sms_message_directions"
    app:layout_constraintWidth_percent="0.9"
    app:layout_constraintTop_toBottomOf="@id/enable_sms_switch"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:textSize="16sp"
    android:textColor="@color/blue"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/go_to_settings_apps_InventoryMaker_permissions_if_you_wish_to_disable_setting"/>


</androidx.constraintlayout.widget.ConstraintLayout>