<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.85"
        android:id="@+id/recycle_view"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="visible"/>

    <View
        android:id="@+id/dummy_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view"
        app:layout_constraintWidth_percent=".05"
        app:layout_constraintHeight_percent=".22"
        android:layout_height="0dp"
        android:layout_width="0dp"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/dummy_left"
        app:layout_constraintStart_toEndOf="@id/dummy_left"
        android:layout_marginTop="10dp"
        android:id="@+id/title_textview"
        android:labelFor="@id/title_edittext"
        android:text="@string/title"
        android:textSize="22sp"
        android:textColor="@color/indigo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/title_textview"
        app:layout_constraintStart_toEndOf="@id/dummy_left"
        android:id="@+id/desc_textview"
        android:labelFor="@id/desc_edittext"
        android:layout_marginTop="80dp"
        android:text="@string/description"
        android:textSize="22sp"
        android:textColor="@color/indigo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/desc_textview"
        app:layout_constraintStart_toEndOf="@id/dummy_left"
        android:id="@+id/qty_textview"
        android:labelFor="@id/qty_edittext"
        android:layout_marginTop="20dp"
        android:text="@string/quantity"
        android:textSize="22sp"
        android:textColor="@color/indigo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/title_textview"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintHeight_percent=".08"
        android:textColor="@color/indigo"
        android:id="@+id/title_edittext"
        android:inputType="text"
        android:textSize="22sp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/desc_textview"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintHeight_percent=".08"
        android:textColor="@color/indigo"
        android:id="@+id/desc_edittext"
        android:lines="3"
        android:maxLength="65"
        android:maxLines="3"
        android:minLines="3"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="Quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/qty_textview"
        app:layout_constraintWidth_percent=".6"
        app:layout_constraintHeight_percent=".08"
        android:id="@+id/qty_edittext"
        android:textColor="@color/indigo"
        android:inputType="number"
        android:textSize="22sp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/submit_button"
        android:backgroundTint="@color/indigo"
        android:textSize="20sp"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHeight_percent=".1"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/qty_edittext"
        app:layout_constraintStart_toStartOf="@id/qty_edittext"
        android:text="@string/submit"/>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/add_fab"
            app:tint="@color/white"
            app:backgroundTint="@color/blue"
            app:backgroundTintMode="src_atop"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>